--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!--Card 2-->
       <article class="card">
         <figure>
-          <img src="car1.jpg" alt="Car image">
+          <img src="images/showcase.jpg" alt="Car image">
           <figcaption>Latest Tesla Model</figcaption>
         </figure>
         <h2>Tesla Unveils New Model</h2>
@@ -42,7 +42,7 @@
 <!--Card 3-->
       <article class="card">
         <figure>
-          <img src="car1.jpg" alt="Car image">
+          <img src="images/showcase.jpg" alt="Car image">
           <figcaption>Latest Tesla Model</figcaption>
         </figure>
         <h2>Tesla Unveils New Model</h2>
@@ -52,7 +52,7 @@
 <!--Card 4-->
       <article class="card">
         <figure>
-          <img src="car1.jpg" alt="Car image">
+          <img src="images/showcase.jpg" alt="Car image">
           <figcaption>Latest Tesla Model</figcaption>
         </figure>
         <h2>Tesla Unveils New Model</h2>
@@ -62,7 +62,7 @@
 <!--Card 5-->
       <article class="card">
         <figure>
-          <img src="car1.jpg" alt="Car image">
+          <img src="images/showcase.jpg" alt="Car image">
           <figcaption>Latest Tesla Model</figcaption>
         </figure>
         <h2>Tesla Unveils New Model</h2>
@@ -72,7 +72,7 @@
 <!--Card 6-->
       <article class="card">
         <figure>
-          <img src="car1.jpg" alt="Car image">
+          <img src="images/showcase.jpg" alt="Car image">
           <figcaption>Latest Tesla Model</figcaption>
         </figure>
         <h2>Tesla Unveils New Model</h2>
