--- a/index.html
+++ b/index.html
@@ -1,90 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trending Car News</title>
-  <link rel="stylesheet" href="css/index.css">
-</head>
-<body>
-  <header>
-    <h1>Trending Car News</h1>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-      <a href="subscribe.html">Subscribe</a>
-    </nav>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Trending Car News</title>
+    <link rel="stylesheet" href="css/index.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Trending Car News</h1>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+        <a href="subscribe.html">Subscribe</a>
+      </nav>
+    </header>
 
-  <main>
-    <section class="articles-grid">
-      <!--Card 1-->
-      <article class="card">
-        <figure>
-          <img src="images/showcase.jpg" alt="Car image">
-          <figcaption>Latest Tesla Model</figcaption>
-        </figure>
-        <h2>Tesla Unveils New Model</h2>
-        <p>The latest Tesla model sets a new standard for EVs.</p>
-        <a href="post.html" class="btn">Read More</a>
-      </article>
-<!--Card 2-->
-      <article class="card">
-        <figure>
-          <img src="images/showcase.jpg" alt="Car image">
-          <figcaption>Latest Tesla Model</figcaption>
-        </figure>
-        <h2>Tesla Unveils New Model</h2>
-        <p>The latest Tesla model sets a new standard for EVs.</p>
-        <a href="post.html" class="btn">Read More</a>
-      </article>
-<!--Card 3-->
-      <article class="card">
-        <figure>
-          <img src="images/showcase.jpg" alt="Car image">
-          <figcaption>Latest Tesla Model</figcaption>
-        </figure>
-        <h2>Tesla Unveils New Model</h2>
-        <p>The latest Tesla model sets a new standard for EVs.</p>
-        <a href="post.html" class="btn">Read More</a>
-      </article>
-<!--Card 4-->
-      <article class="card">
-        <figure>
-          <img src="images/showcase.jpg" alt="Car image">
-          <figcaption>Latest Tesla Model</figcaption>
-        </figure>
-        <h2>Tesla Unveils New Model</h2>
-        <p>The latest Tesla model sets a new standard for EVs.</p>
-        <a href="post.html" class="btn">Read More</a>
-      </article>
-<!--Card 5-->
-      <article class="card">
-        <figure>
-          <img src="images/showcase.jpg" alt="Car image">
-          <figcaption>Latest Tesla Model</figcaption>
-        </figure>
-        <h2>Tesla Unveils New Model</h2>
-        <p>The latest Tesla model sets a new standard for EVs.</p>
-        <a href="post.html" class="btn">Read More</a>
-      </article>
-<!--Card 6-->
-      <article class="card">
-        <figure>
-          <img src="images/showcase.jpg" alt="Car image">
-          <figcaption>Latest Tesla Model</figcaption>
-        </figure>
-        <h2>Tesla Unveils New Model</h2>
-        <p>The latest Tesla model sets a new standard for EVs.</p>
-        <a href="post.html" class="btn">Read More</a>
-      </article>
+    <main>
+      <section class="articles-grid">
+        <!--Card 1-->
+        <article class="card">
+          <figure>
+            <img src="images/showcase.jpg" alt="Car image" />
+            <figcaption>Latest Tesla Model</figcaption>
+          </figure>
+          <h2>Tesla Unveils New Model</h2>
+          <p>The latest Tesla model sets a new standard for EVs.</p>
+          <a href="post.html" class="btn">Read More</a>
+        </article>
+        <!--Card 2-->
+        <article class="card">
+          <figure>
+            <img src="images/showcase.jpg" alt="Car image" />
+            <figcaption>Latest Tesla Model</figcaption>
+          </figure>
+          <h2>Tesla Unveils New Model</h2>
+          <p>The latest Tesla model sets a new standard for EVs.</p>
+          <a href="post.html" class="btn">Read More</a>
+        </article>
+        <!--Card 3-->
+        <article class="card">
+          <figure>
+            <img src="images/showcase.jpg" alt="Car image" />
+            <figcaption>Latest Tesla Model</figcaption>
+          </figure>
+          <h2>Tesla Unveils New Model</h2>
+          <p>The latest Tesla model sets a new standard for EVs.</p>
+          <a href="post.html" class="btn">Read More</a>
+        </article>
+        <!--Card 4-->
+        <article class="card">
+          <figure>
+            <img src="images/showcase.jpg" alt="Car image" />
+            <figcaption>Latest Tesla Model</figcaption>
+          </figure>
+          <h2>Tesla Unveils New Model</h2>
+          <p>The latest Tesla model sets a new standard for EVs.</p>
+          <a href="post.html" class="btn">Read More</a>
+        </article>
+        <!--Card 5-->
+        <article class="card">
+          <figure>
+            <img src="images/showcase.jpg" alt="Car image" />
+            <figcaption>Latest Tesla Model</figcaption>
+          </figure>
+          <h2>Tesla Unveils New Model</h2>
+          <p>The latest Tesla model sets a new standard for EVs.</p>
+          <a href="post.html" class="btn">Read More</a>
+        </article>
+        <!--Card 6-->
+        <article class="card">
+          <figure>
+            <img src="images/showcase.jpg" alt="Car image" />
+            <figcaption>Latest Tesla Model</figcaption>
+          </figure>
+          <h2>Tesla Unveils New Model</h2>
+          <p>The latest Tesla model sets a new standard for EVs.</p>
+          <a href="post.html" class="btn">Read More</a>
+        </article>
+      </section>
+    </main>
 
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 Trending Car News. All rights reserved.</p>
-  </footer>
-</body>
+    <footer>
+      <p>&copy; 2024 Trending Car News. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
