--- a/post.html
+++ b/post.html
@@ -25,38 +25,42 @@
           <p>By John Doe, Age 30</p>
         </header>
         <img src="images/model-3.jpg" alt="Tesla Model 3" />
-        <p>
+
+        <blockquote>
           The latest Tesla Model 3 is redefining electric mobility with sleek aesthetics, enhanced efficiency, and
-          cutting-edge technology. Designed to be both practical and aspirational, the revamped model features improved
+          cutting-edge technology.
+        </blockquote>
+        <p>
+          Designed to be both <u> practical</u> and <u>aspirational,</u> the revamped model features improved
           aerodynamics, a minimalist interior with premium materials, and a range of up to 358 miles on a single charge,
           depending on configuration. Equipped with Tesla's advanced Autopilot system and over-the-air updates, the
           Model 3 delivers a futuristic driving experience. Ideal for eco-conscious drivers, this model offers a perfect
-          balance of affordability, sustainability, and Tesla’s signature performance.
+          balance of <em>affordability, sustainability, and Tesla’s signature performance.</em>
         </p>
-<!--information on specific models or versions of model 3-->
+        <!--information on specific models or versions of model 3-->
         <h3>Model 3 Rear-Wheel Drive (RWD)</h3>
-    <ul>
-      <li><strong>0-60 mph Acceleration:</strong> Approximately 5.8 seconds</li>
-      <li><strong>Curb Weight:</strong> Around 3,891 lbs</li>
-      <li><strong>Price:</strong> Starting at $38,990</li>
-      <li><strong>Range:</strong> Up to 272 miles (EPA estimated)</li>
-    </ul>
+        <ul>
+          <li><strong>0-60 mph Acceleration:</strong> Approximately 5.8 seconds</li>
+          <li><strong>Curb Weight:</strong> Around 3,891 lbs</li>
+          <li><strong>Price:</strong> Starting at $38,990</li>
+          <li><strong>Range:</strong> Up to 272 miles (EPA estimated)</li>
+        </ul>
 
-    <h3>Model 3 Long Range All-Wheel Drive (AWD)</h3>
-    <ul>
-      <li><strong>0-60 mph Acceleration:</strong> Approximately 4.2 seconds</li>
-      <li><strong>Curb Weight:</strong> Approximately 4,030 lbs</li>
-      <li><strong>Price:</strong> Starting at $45,990</li>
-      <li><strong>Range:</strong> Up to 341 miles (EPA estimated)</li>
-    </ul>
+        <h3>Model 3 Long Range All-Wheel Drive (AWD)</h3>
+        <ul>
+          <li><strong>0-60 mph Acceleration:</strong> Approximately 4.2 seconds</li>
+          <li><strong>Curb Weight:</strong> Approximately 4,030 lbs</li>
+          <li><strong>Price:</strong> Starting at $45,990</li>
+          <li><strong>Range:</strong> Up to 341 miles (EPA estimated)</li>
+        </ul>
 
-    <h3>Model 3 Performance</h3>
-    <ul>
-      <li><strong>0-60 mph Acceleration:</strong> As quick as 2.8 seconds</li>
-      <li><strong>Curb Weight:</strong> Approximately 4,045 lbs</li>
-      <li><strong>Price:</strong> Starting at $56,630</li>
-      <li><strong>Range:</strong> Up to 315 miles (EPA estimated)</li>
-    </ul>
+        <h3>Model 3 Performance</h3>
+        <ul>
+          <li><strong>0-60 mph Acceleration:</strong> As quick as 2.8 seconds</li>
+          <li><strong>Curb Weight:</strong> Approximately 4,045 lbs</li>
+          <li><strong>Price:</strong> Starting at $56,630</li>
+          <li><strong>Range:</strong> Up to 315 miles (EPA estimated)</li>
+        </ul>
       </article>
 
       <section class="share">
