--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
       </nav>
     </header>
 
-    <main>
+    <main class="grid-container">
+        <!-- Sidebar Section -->
+  <aside class="sidebar">
+    <h2>Categories</h2>
+    <ul>
+      <li><a href="#">Trending News</a></li>
+      <li><a href="#">Electric Cars</a></li>
+      <li><a href="#">Car Reviews</a></li>
+      <li><a href="#">Future Models</a></li>
+      <li><a href="#">Subscribe</a></li>
+    </ul>
+  </aside>
+
       <section class="articles-grid">
         <!--Card 1-->
         <article class="card">
